# reminder

./: .gitignore  Cargo.toml  README.md  schedule.rmdr
src/: alert.rs  main.rs  parser.rs
