[package]
name = "reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
pollster = "0.3.0"
wgpu = "0.18.0"
wgpu_text = "0.8.5"
winit = { version = "0.29.3", features = ["rwh_05"]}
